# nameherepnr

./: .gitignore  Cargo.toml  LICENSE  README
.fleet/: run.json
.github/: FUNDING.yml
.github/workflows/: quickstart.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/ice40/: arch_defs.rs  mod.rs
common/src/kernel/: arch_api.rs  base.rs  base_clusterinfo.rs  base_context.rs  base_types.rs  bits.rs  cell.rs  context.rs  delay.rs  id_string.rs  indexed_store.rs  mod.rs  net.rs  port.rs  property.rs  region.rs  segment.rs  tests.rs  timing.rs  types.rs
frontend/: Cargo.toml
frontend/src/: json.rs  lib.rs
ice40/: Cargo.toml
ice40/src/: arch_defs.rs  lib.rs
