[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.6"

[dependencies]
log = "0.4"
hashers = "1.0.1"
ordered-float = "3.2.0"
thiserror = "1.0"
bitvec = "1.0.1"
typed-index-collections = "3.1.0"
thunderdome = { git = "https://github.com/tyler274/thunderdome", branch = "typed-index" }
rand = "0.8.5"
derive_more = "0.99.17"
smallvec = {version = "1.10.0", features = ["const_new", "const_generics", "union", "serde"]}
serde = {version = "1.0", features = ["derive"]}
#highway = "0.8.1"
#ringbuf = "0.3.1"
#hash_hasher = "2.0.3"
#sparseset = "1.0.1"
#indexmap = "1.9.1"
